force-app/main/default/objects/Proyecto__c/fields/Alerta_Cobros__c.field-meta.xml
<CustomField>
    <fullName>Alerta_Cobros__c</fullName>
    <formula>IF(Avance_en_Cobros__c &gt;= 1,IMAGE( $Setup.Semaforo__c.Semaforo_Verde__c , &quot;Verde&quot;,30,30),IF(Avance_en_Cobros__c &lt;0.8, IMAGE($Setup.Semaforo__c.Semaforo_rojo__c, &quot;Rojo&quot;,30,30), IMAGE( $Setup.Semaforo__c.Semaforo_Amarillo__c , &quot;Amarillo&quot;,30,30)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerta Cobros</label>
    <type>Text</type>
</CustomField>