force-app/main/default/objects/Proyecto__c/fields/Alerta_en_Costos__c.field-meta.xml
<CustomField>
    <fullName>Alerta_en_Costos__c</fullName>
    <formula>IF(Avance_en_Costos__c &lt;= Avance_Tecnico_Mensual__c, IMAGE( $Setup.Semaforo__c.Semaforo_Verde__c , &quot;Verde&quot;,30,30), IF((Avance_en_Costos__c - Avance_Tecnico_Mensual__c)&lt;=0.1,IMAGE( $Setup.Semaforo__c.Semaforo_Amarillo__c , &quot;Amarillo&quot;,30,30),IMAGE($Setup.Semaforo__c.Semaforo_rojo__c, &quot;Rojo&quot;,30,30)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerta en Costos</label>
    <type>Text</type>
</CustomField>