force-app/main/default/objects/Proyecto__c/fields/Alerta_Margen__c.field-meta.xml
<CustomField>
    <fullName>Alerta_Margen__c</fullName>
    <formula>IF (AM__c&gt;= 0, IMAGE( $Setup.Semaforo__c.Semaforo_Verde__c , &quot;Verde&quot;,30,30), IMAGE($Setup.Semaforo__c.Semaforo_rojo__c, &quot;Rojo&quot;,30,30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerta Margen</label>
    <type>Text</type>
</CustomField>