force-app/main/default/objects/Proyecto__c/fields/Alertas_en_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Alertas_en_Facturacion__c</fullName>
    <formula>IF(Avance_en_Facturacion__c &gt;= Avance_Tecnico_Mensual__c, IMAGE( $Setup.Semaforo__c.Semaforo_Verde__c , &quot;Verde&quot;,30,30), IF((Avance_Tecnico_Mensual__c - Avance_en_Facturacion__c)&lt;=0.2,IMAGE( $Setup.Semaforo__c.Semaforo_Amarillo__c , &quot;Amarillo&quot;,30,30),IMAGE($Setup.Semaforo__c.Semaforo_rojo__c, &quot;Rojo&quot;,30,30)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alertas en Facturación</label>
    <type>Text</type>
</CustomField>