force-app/main/default/objects/Proyecto__c/fields/Avance_de_Produccion__c.field-meta.xml
<CustomField>
    <fullName>Avance_de_Produccion__c</fullName>
    <description>Sumatorio de GE: Avance de Producción - &gt; Entregable: Avance Ponderado</description>
    <label>Avance de Producción</label>
    <summarizedField>Entregable__c.Avance_Producci_n__c</summarizedField>
    <summaryForeignKey>Entregable__c.Proyecto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>