force-app/main/default/objects/Proyecto__c/fields/Avance_en_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Avance_en_Facturacion__c</fullName>
    <formula>If (Facturacion__c / impcontrato__c &gt;= 1,1,Facturacion__c / impcontrato__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Facturación Real / Importe Contrato</inlineHelpText>
    <label>Avance en Facturación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>