force-app/main/default/objects/Proyecto__c/fields/Avance_en_Tiempo__c.field-meta.xml
<CustomField>
    <fullName>Avance_en_Tiempo__c</fullName>
    <formula>If (DuracionReal__c / DuracionPlan__c &gt;= 1,1,DuracionReal__c / DuracionPlan__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual Duration / Plan Duration</inlineHelpText>
    <label>Avance en Tiempo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>