force-app/main/default/objects/Proyecto__c/fields/Calculo_Coste_Prom_Inc_Coste_Prom_Resto__c.field-meta.xml
<CustomField>
    <fullName>Calculo_Coste_Prom_Inc_Coste_Prom_Resto__c</fullName>
    <description>Calculado con los datos de EUR de la FdP</description>
    <formula>IF(Coste_Promedio_Resto_EUR__c &lt;&gt; 0 , Coste_Promedio_Incurrido_EUR__c / Coste_Promedio_Resto_EUR__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cálculo Coste Prom Inc/Coste Prom Resto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>