force-app/main/default/objects/Proyecto__c/fields/Calculo_Inventario_Produccion_media__c.field-meta.xml
<CustomField>
    <fullName>Calculo_Inventario_Produccion_media__c</fullName>
    <formula>IF(Prod_media__c  &lt;&gt; 0 ,Inventario__c / Prod_media__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cálculo Inventario / Producción media</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>