force-app/main/default/objects/Proyecto__c/fields/Calculo_Inventario_Razonable_IC__c.field-meta.xml
<CustomField>
    <fullName>Calculo_Inventario_Razonable_IC__c</fullName>
    <formula>(PR_hace_3_meses__c- Facturacion__c)/ impcontrato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cálculo Inventario Razonable / IC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>