force-app/main/default/objects/Proyecto__c/fields/Calculo_Margen_Prev_Margen_Plan__c.field-meta.xml
<CustomField>
    <fullName>Calculo_Margen_Prev_Margen_Plan__c</fullName>
    <description>Se calcula a partir de los datos en EUR de la FdP</description>
    <formula>IF(margenplan_FdP_EUR__c &gt; 0 ,1-(Margen_Previsto_FdP_EUR__c /margenplan_FdP_EUR__c),
IF ( margenplan_FdP_EUR__c &lt; 0 , -(1-(Margen_Previsto_FdP_EUR__c /margenplan_FdP_EUR__c)),0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cálculo Margen Prev/Margen Plan(FdP EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>