force-app/main/default/objects/Proyecto__c/fields/Calculo_Pendiente_Cobro_Razonable__c.field-meta.xml
<CustomField>
    <fullName>Calculo_Pendiente_Cobro_Razonable__c</fullName>
    <formula>Facturacion_hace_3_meses__c -  Cobrado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cálculo Pendiente Cobro Razonable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>