force-app/main/default/objects/Proyecto__c/fields/Calculo_WIP_IC__c.field-meta.xml
<CustomField>
    <fullName>Calculo_WIP_IC__c</fullName>
    <formula>IF(impcontrato__c &lt;&gt; 0 ,WIP__c / impcontrato__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cálculo WIP / IC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>