force-app/main/default/objects/Proyecto__c/fields/Calculo_WIP_Prod_Media__c.field-meta.xml
<CustomField>
    <fullName>Calculo_WIP_Prod_Media__c</fullName>
    <formula>IF(Prod_media__c &lt;&gt; 0 , WIP__c / Prod_media__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cálculo WIP / Prod Media</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>