force-app/main/default/objects/Proyecto__c/fields/Calculo_WIP_Razonable_IC__c.field-meta.xml
<CustomField>
    <fullName>Calculo_WIP_Razonable_IC__c</fullName>
    <formula>IF(PR_hace_3_meses__c&lt;&gt;0,  (PR_hace_3_meses__c-  Facturacion__c)/impcontrato__c   ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cálculo WIP Razonable / IC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>