force-app/main/default/objects/Proyecto__c/fields/CalculoDuracionPlan__c.field-meta.xml
<CustomField>
    <fullName>CalculoDuracionPlan__c</fullName>
    <description>Fecha Fin Proyecto- Fecha Inicio Proyecto (meses)</description>
    <formula>(YEAR(FFC__c) -  YEAR(FIC__c))*12+ MONTH(FFC__c) -  MONTH(FIC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duración Plan (meses)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>