force-app/main/default/objects/Proyecto__c/fields/CalculoDuracionPrevista__c.field-meta.xml
<CustomField>
    <fullName>CalculoDuracionPrevista__c</fullName>
    <description>Fecha Fin Prevista- Fecha Inicio (meses)</description>
    <formula>( YEAR(FFP__c) -YEAR(FIC__c))*12+ MONTH(FFP__c) -MONTH(FIC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duración Prevista (meses)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>