force-app/main/default/objects/Proyecto__c/fields/CalculoDuracionReal__c.field-meta.xml
<CustomField>
    <fullName>CalculoDuracionReal__c</fullName>
    <description>Fecha datos económicos - Fecha de inicio (meses)</description>
    <formula>IF( ISBLANK(Fecha_Datos_Economicos__c ) ,0,

(YEAR(Fecha_Datos_Economicos__c)-YEAR(FIC__c))*12 + (MONTH( Fecha_Datos_Economicos__c)-MONTH(FIC__c))
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duración Real  (meses)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>