force-app/main/default/objects/Proyecto__c/fields/Categorizacion__c.field-meta.xml
<CustomField>
    <fullName>Categorizacion__c</fullName>
    <formula>IF(Recurso__c =&quot;Verdadero&quot;, &quot;RECURSO&quot;,
			If(Facturacion_tipo__c =&quot;Verdadero&quot;, &quot;FACTURACIÓN&quot;,
					 IF(Cobro_tipo__c =&quot;Verdadero&quot;,&quot;COBRO&quot;,
							    IF(Otros_productos__c =&quot;Verdadero&quot;,&quot;PROD. OK&quot;,&quot;PROD.AUDI.&quot;)
							)
					)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categorización</label>
    <type>Text</type>
</CustomField>