force-app/main/default/objects/Proyecto__c/fields/Cobrado_FdP_EUR__c.field-meta.xml
<CustomField>
    <fullName>Cobrado_FdP_EUR__c</fullName>
    <label>Cobrado (FdP EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>