force-app/main/default/objects/Proyecto__c/fields/Cobro_IC_FdP_EUR__c.field-meta.xml
<CustomField>
    <fullName>Cobro_IC_FdP_EUR__c</fullName>
    <formula>IF(impcontrato_FdP_EUR__c &lt;&gt;0, Cobrado_FdP_EUR__c /  impcontrato_FdP_EUR__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cobro / IC (FdP EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>