force-app/main/default/objects/Proyecto__c/fields/Cobro_tipo__c.field-meta.xml
<CustomField>
    <fullName>Cobro_tipo__c</fullName>
    <formula>IF( AND(Prod_Cobro__c &gt;0.95, Prod_Cobro__c&lt;1.05),&quot;Verdadero&quot;,&quot;Falso&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cobro</label>
    <type>Text</type>
</CustomField>