force-app/main/default/objects/Proyecto__c/fields/Cost_Promed_Inc_Cost_Promed__c.field-meta.xml
<CustomField>
    <fullName>Cost_Promed_Inc_Cost_Promed__c</fullName>
    <formula>IF (Coste_Promedio_Resto__c &gt; 0, IF (Coste_Promedio_Incurrido__c / Coste_Promedio_Resto__c &gt; 1.5, &apos;&gt; 1.5&apos;, &apos;&lt; 1.5&apos;), &apos;&lt; 1.5&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Promed Inc / Cost Promed</label>
    <type>Text</type>
</CustomField>