force-app/main/default/objects/Proyecto__c/fields/Coste_Directo_Real_EUR__c.field-meta.xml
<CustomField>
    <fullName>Coste_Directo_Real_EUR__c</fullName>
    <formula>IF(ISBLANK(costeDirReal__c),0,ROUND((costeDirReal__c/ Cambio_segun_moneda_local__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste Directo Real (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>