force-app/main/default/objects/Proyecto__c/fields/Coste_Promedio_Incurrido__c.field-meta.xml
<CustomField>
    <fullName>Coste_Promedio_Incurrido__c</fullName>
    <formula>if (CalculoDuracionReal__c &lt;&gt; 0, costeDirReal__c /  CalculoDuracionReal__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste Promedio Incurrido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>