force-app/main/default/objects/Proyecto__c/fields/Coste_Promedio_Resto__c.field-meta.xml
<CustomField>
    <fullName>Coste_Promedio_Resto__c</fullName>
    <formula>if (( CalculoDuracionPrevista__c -  CalculoDuracionReal__c ) &lt;&gt; 0, Coste_resto__c / ABS( CalculoDuracionPrevista__c -  CalculoDuracionReal__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste Promedio Resto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>