force-app/main/default/objects/Proyecto__c/fields/Coste_Promedio_Resto_EUR__c.field-meta.xml
<CustomField>
    <fullName>Coste_Promedio_Resto_EUR__c</fullName>
    <description>Se calcula a partir del dato en EUR de la FdP</description>
    <formula>if (( CalculoDuracionPrevista__c - CalculoDuracionReal__c ) &lt;&gt; 0, Coste_resto_FdP_EUR__c / ABS( CalculoDuracionPrevista__c - CalculoDuracionReal__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste Promedio Resto (FdP EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>