force-app/main/default/objects/Proyecto__c/fields/Coste_Real_diciembre__c.field-meta.xml
<CustomField>
    <fullName>Coste_Real_diciembre__c</fullName>
    <label>Coste Real diciembre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>