force-app/main/default/objects/Proyecto__c/fields/Coste_Real_diciembre_EUR__c.field-meta.xml
<CustomField>
    <fullName>Coste_Real_diciembre_EUR__c</fullName>
    <label>Coste Real diciembre (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>