force-app/main/default/objects/Proyecto__c/fields/Coste_Real_year__c.field-meta.xml
<CustomField>
    <fullName>Coste_Real_year__c</fullName>
    <formula>costeDirReal__c - Coste_Real_diciembre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste Real año</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>