force-app/main/default/objects/Proyecto__c/fields/Coste_resto__c.field-meta.xml
<CustomField>
    <fullName>Coste_resto__c</fullName>
    <formula>costeDirPrev__c - costeDirReal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste resto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>