force-app/main/default/objects/Proyecto__c/fields/Coste_resto_FdP_EUR__c.field-meta.xml
<CustomField>
    <fullName>Coste_resto_FdP_EUR__c</fullName>
    <formula>costeDirPrev_FdP_EUR__c - costeDirReal_FdP_EUR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste resto (FdP EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>