force-app/main/default/objects/Proyecto__c/fields/costeDirPrev_FdP_EUR__c.field-meta.xml
<CustomField>
    <fullName>costeDirPrev_FdP_EUR__c</fullName>
    <label>Costo Directo Previsto (FdP EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>