force-app/main/default/objects/Proyecto__c/fields/costeDirReal__c.field-meta.xml
<CustomField>
    <fullName>costeDirReal__c</fullName>
    <description>El valor se trae de SAP</description>
    <label>Costo Directo Real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>