force-app/main/default/objects/Proyecto__c/fields/Delta_produccion_por_costo_planificado__c.field-meta.xml
<CustomField>
    <fullName>Delta_produccion_por_costo_planificado__c</fullName>
    <formula>Produccion_pendiente__c *  Porcentaje_de_producto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta producción por Costo Plan(FdP EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>