force-app/main/default/objects/Proyecto__c/fields/Documentalista__c.field-meta.xml
<CustomField>
    <fullName>Documentalista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documentalista</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProyectosDocumentalistas</relationshipName>
    <type>Lookup</type>
</CustomField>