force-app/main/default/objects/Proyecto__c/fields/DuracionPrevista__c.field-meta.xml
<CustomField>
    <fullName>DuracionPrevista__c</fullName>
    <description>El valor se trae de SAP</description>
    <label>Duración Prevista (mes)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>