force-app/main/default/objects/Proyecto__c/fields/DuracionReal__c.field-meta.xml
<CustomField>
    <fullName>DuracionReal__c</fullName>
    <description>El valor se trae de SAP</description>
    <label>Duración Real (mes)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>