force-app/main/default/objects/Proyecto__c/fields/Entregable__c.field-meta.xml
<CustomField>
    <fullName>Entregable__c</fullName>
    <formula>Entregables__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entregables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>