force-app/main/default/objects/Proyecto__c/fields/Entregable_s__c.field-meta.xml
<CustomField>
    <fullName>Entregable_s__c</fullName>
    <label>Entregables</label>
    <summaryForeignKey>Subentregable__c.Proyecto__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>