force-app/main/default/objects/Proyecto__c/fields/Entregables__c.field-meta.xml
<CustomField>
    <fullName>Entregables__c</fullName>
    <label>Grupos de Entregables</label>
    <summaryForeignKey>Entregable__c.Proyecto__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>