force-app/main/default/objects/Proyecto__c/fields/Entregables_Firmado__c.field-meta.xml
<CustomField>
    <fullName>Entregables_Firmado__c</fullName>
    <label>Entregables Firmados</label>
    <summaryFilterItems>
        <field>Subentregable__c.Estado__c</field>
        <operation>equals</operation>
        <value>Firmado</value>
    </summaryFilterItems>
    <summaryForeignKey>Subentregable__c.Proyecto__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>