force-app/main/default/objects/Proyecto__c/fields/Entregables_firmados__c.field-meta.xml
<CustomField>
    <fullName>Entregables_firmados__c</fullName>
    <formula>EntregablesFirmados__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entregables firmados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>