force-app/main/default/objects/Proyecto__c/fields/EntregablesFirmados__c.field-meta.xml
<CustomField>
    <fullName>EntregablesFirmados__c</fullName>
    <label>Grupos de Entregables Firmados</label>
    <summaryFilterItems>
        <field>Entregable__c.Cerrado__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Entregable__c.Proyecto__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>