force-app/main/default/objects/Proyecto__c/fields/Facturacion_hace_3_meses__c.field-meta.xml
<CustomField>
    <fullName>Facturacion_hace_3_meses__c</fullName>
    <label>Facturacion hace 3 meses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>