force-app/main/default/objects/Proyecto__c/fields/Facturacion_tipo__c.field-meta.xml
<CustomField>
    <fullName>Facturacion_tipo__c</fullName>
    <formula>IF(AND(Prod_Factu__c &gt;0.95,Prod_Factu__c&lt;1.05), &quot;Verdadero&quot;, &quot;Falso&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facturación</label>
    <type>Text</type>
</CustomField>